# UpnpTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fourkgarden/dlanupnp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/include/: dlna.h
app/src/main/include/upnp/: autoconfig.h  ithread.h  upnpconfig.h
app/src/main/java/com/fourkgarden/dlanupnp/: MainActivity.java
app/src/main/jniLibs/armeabi-v7a/: libixml.la  libupnp.la
app/src/main/res/values/: strings.xml
app/src/test/java/com/fourkgarden/dlanupnp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
